--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -20,11 +20,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.3",
+    "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "5.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "graphql": "^16.8.0",
+    "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ts-morph": "^19.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -38,8 +48,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.48.0",
     "eslint-config-custom": "workspace:*",
-    "prettier": "^3.0.3",
     "jest": "^29.5.0",
+    "prettier": "^3.0.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
