--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "dev": "lerna run dev --stream",
+    "lint": "lerna run lint --stream",
+    "test": "lerna run test --stream",
+    "clean": "lerna run clean --stream",
+    "build": "lerna run build --stream"
+  },
   "devDependencies": {
     "@types/node": "^20.5.7",
     "eslint": "^8.48.0",
