--- a/apps/api/.env
+++ b/apps/api/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+JWT_SECRET=secret
 NODE_ENV=local
 DATABASE_URL="postgresql://postgres:YkaPSpVgh5oqAO8t@db.vswyivxjftuxlbyzewxi.supabase.co:5432/postgres"
