--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,10 +26,14 @@
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.8",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "5.2.0",
+    "@types/bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "graphql": "^16.8.0",
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
