--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,6 +35,9 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "graphql": "^16.8.0",
+    "nestjs-pino": "^3.4.0",
+    "pino-http": "^8.4.0",
+    "pino-pretty": "^10.2.0",
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
