--- a/apps/desktop-app/.vscode/extensions.json
+++ b/apps/desktop-app/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-  "recommendations": ["tauri-apps.tauri-vscode", "rust-lang.rust-analyzer"]
+  "recommendations": [
+    "tauri-apps.tauri-vscode",
+    "rust-lang.rust-analyzer",
+    "vadimcn.vscode-lldb",
+    "tamasfe.even-better-toml"
+  ]
 }
