--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,12 +19,13 @@
     }
   },
   "scripts": {
-    "dev": "concurrently \"tsc --incremental -w\" \"vite build --watch\"",
+    "dev": "concurrently \"tsc --incremental -w\" \"vite build --watch\" \"codegen:watch\"",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "clean": "rimraf dist",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.ts",
+    "codegen:watch": "graphql-codegen --config codegen.ts --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
@@ -41,7 +42,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.2",
+    "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
